use ethers js to read contract data

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loot Game</title>
+    <title>Adventurer dApp</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button onclick="getLastGameIndex()">Get last game index</button>
     <script src="script.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+        type="application/javascript"></script>
 </body>
 </html>
