feat: add connectMetamask() and battle()

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <button onclick="getLastGameIndex()">Get last game index</button>
+    <button onclick="startBattle()">Start Battle!!!</button>
+    <button id="connectButton" onclick ="connectMetamask()">Connect Metamask</button>
     <script src="script.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
         type="application/javascript"></script>
