--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="getLastGameIndex()">Get last game index</button>
-    <button onclick="startBattle()">Start Battle!!!</button>
-    <button onclick="getRoundDetails()" id="roundDetails">Get Round details</button>
-    <button onclick="getHeroDetails()" id="heroDetails">Get Hero details</button>
-    <button onclick="getSpawnDetails()" id="spawnDetails">Get Spawn details</button>
-    <button onclick ="connectMetamask()" id="connectButton">Connect Metamask</button>
-
+    <button onclick="connectMetamask()" id="connectButton">Connect Metamask</button>
+    <button onclick="" id="claimTokens">Claim Tokens</button>
+    
     <div>
-        <p id="round"></p>
-        <p id="hero"></p>
-        <p id="spawn"></p>
+        <h3>Map your Adventurer to start Battling</h3>
+        <p>Select your Adventurer NFT: </p>
+        <p id="mapHero">Enter your hero name: <input></p>
+        <button onclick="startBattle()">Start Battle!!!</button>
+    </div>
+    
+    <div>
+        <h3>Details</h3>
+        <button onclick="getLastGameIndex()">Get last game index</button>
+        <p id="gameIndex">Latest Game Index: </p>
+        <button onclick="getRoundDetails()" id="roundDetails">Get Round details</button>
+        <p id="round">Round Details: </p>
+        <button onclick="getHeroDetails()" id="heroDetails">Get Hero details</button>
+        <p id="hero">Hero Details: </p>
+        <button onclick="getSpawnDetails()" id="spawnDetails">Get Spawn details</button>
+        <p id="spawn">Spawn Details: </p>
     </div>
 
     <script src="script.js"></script>
