--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
     <script src="script.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
         type="application/javascript"></script>
+    <script src="nft.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </body>
 </html>
