--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+    <div id="nav">
+        <button id="connect" onclick="connect()">Connect Wallet</button>
+    </div>
+
+    <div id="controls">
+        <button id="getAllNFT" onclick="main()">Load Adventurers</button>
+    </div>
+
     <div id="root">
         <!-- <div>
             <h1>Adventurer #123</h1>
