--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div id="controls">
         <button id="getAllNFT" onclick="main()">Load Adventurers</button>
+        <div id="learn-more"><a href="https://testnets.opensea.io/collection/adventurer-nzfwridt0f" target="_blank">Learn More</a></div>
+        <div id="learn-more"><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">Mint for Free</a></div>
     </div>
 
     <div id="root">
@@ -47,7 +49,7 @@
             <div id="show-hero">show hero here</div>
         </div>
         <div id="generate-spawn">
-            <button id="genSpawnButton">GENERATE SPAWN</button>
+            <button id="genSpawnButton">LOG LAST SPAWN</button>
             <div id="show-spawn">show spawn here</div>
         </div>
     </div>
