add gameFeed to log actions

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <button id="defend-button">Spawn Attack</button>
             <div id="last-defend"></div>
         </div>
-        <div id="game-result"></div>
+        <div id="game-result">
+            <h3>Game Log</h3>
+        </div>
     </div>
 
     <hr>
