add html boilerplate

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -1,8 +1,18 @@
-<style>
-    body {
-        background-color: #232323;
-    }
-</style>
-
-<canvas></canvas>
-<script src="index.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adventurer</title>
+    <style>
+        body {
+            background-color: #232323;
+        }
+    </style>
+</head>
+<body>
+    <canvas></canvas>
+    <script src="index.js"></script>
+</body>
+</html>
