add foreground objects

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -14,6 +14,7 @@
 <body>
     <canvas></canvas>
     <script src="data/collisions.js"></script>
+    <script src="classes.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
