--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <canvas></canvas>
+    <script src="data/battleZones.js"></script>
     <script src="data/collisions.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
