--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventurer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        * {
+            font-family: 'Press Start 2P', cursive;
+        }
         body {
             background-color: #232323;
+        }
+        h1 {
+            margin: 0;
+        }
+        button {
+            border: 0;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #ddd;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -15,6 +32,18 @@
     <div style="display: inline-block; position: relative;">
         <div id="overlappingDiv" style="background-color: black; position:absolute; top:0; left: 0; bottom: 0; right: 0; opacity: 0; pointer-events: none;"></div>
         <canvas></canvas>
+        <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
+            <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
+                <button>Attack1</button>
+                <button>Attack2</button>
+                <button>Attack3</button>
+                <button>Attack4</button>
+            </div>
+            <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
+                <h3 style="font-size: 16px;">Attack Type</h3>
+            </div>
+        </div>
+
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="data/battleZones.js"></script>
