--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -31,6 +31,25 @@
 <body>
     <div style="display: inline-block; position: relative;">
         <div id="overlappingDiv" style="background-color: black; position:absolute; top:0; left: 0; bottom: 0; right: 0; opacity: 0; pointer-events: none;"></div>
+
+        <!-- enemy health bar -->
+        <div style="background-color: white; width: 250px; position: absolute; top: 50px; left: 50px; border: 4px black solid; padding: 12px">
+            <h3 style="font-size: 16px">Draggle</h3>
+            <div style="position: relative;">
+                <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
+                <div style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+            </div>
+        </div>
+
+        <!-- player health bar -->
+        <div style="background-color: white; width: 250px; position: absolute; top: 330px; right: 50px; border: 4px black solid; padding: 12px">
+            <h3 style="font-size: 16px">Emby</h3>
+            <div style="position: relative;">
+                <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
+                <div style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+            </div>
+        </div>
+
         <canvas></canvas>
         <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
             <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
