implement basic attack (tackle) half done

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -37,7 +37,7 @@
             <h3 style="font-size: 16px">Draggle</h3>
             <div style="position: relative;">
                 <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
-                <div style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+                <div id="enemyHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
         <canvas></canvas>
         <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
             <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
-                <button>Attack1</button>
+                <button>Tackle</button>
                 <button>Attack2</button>
                 <button>Attack3</button>
                 <button>Attack4</button>
