implement basic attack (tackle) complete

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -46,7 +46,7 @@
             <h3 style="font-size: 16px">Emby</h3>
             <div style="position: relative;">
                 <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
-                <div style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+                <div id="playerHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
             </div>
         </div>
 
