add fireball attack

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -54,9 +54,9 @@
         <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
             <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
                 <button>Tackle</button>
-                <button>Attack2</button>
-                <button>Attack3</button>
-                <button>Attack4</button>
+                <button>Fireball</button>
+                <!-- <button>Attack3</button>
+                <button>Attack4</button> -->
             </div>
             <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
                 <h3 style="font-size: 16px;">Attack Type</h3>
@@ -67,6 +67,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="data/battleZones.js"></script>
     <script src="data/collisions.js"></script>
+    <script src="data/attacks.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
 </body>
