--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -52,6 +52,7 @@
 
         <canvas></canvas>
         <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
+            <div id="dialogueBox" style="position:absolute; top: 0; right: 0; bottom: 0; left: 0; background: white; padding: 12px; display: none; cursor: pointer;">Placeholder for Dialogue Box</div>
             <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
                 <button>Tackle</button>
                 <button>Fireball</button>
@@ -70,5 +71,6 @@
     <script src="data/attacks.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
+    <script src="battleScene.js"></script>
 </body>
 </html>
