refactor classes to add extended Monster class

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -53,11 +53,7 @@
         <canvas></canvas>
         <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
             <div id="dialogueBox" style="position:absolute; top: 0; right: 0; bottom: 0; left: 0; background: white; padding: 12px; display: none; cursor: pointer;">Placeholder for Dialogue Box</div>
-            <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
-                <button>Tackle</button>
-                <button>Fireball</button>
-                <!-- <button>Attack3</button>
-                <button>Attack4</button> -->
+            <div id="attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
             </div>
             <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
                 <h3 style="font-size: 16px;">Attack Type</h3>
@@ -69,6 +65,7 @@
     <script src="data/battleZones.js"></script>
     <script src="data/collisions.js"></script>
     <script src="data/attacks.js"></script>
+    <script src="data/monsters.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
     <script src="battleScene.js"></script>
