display attack type

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -56,7 +56,7 @@
             <div id="attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
             </div>
             <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
-                <h3 style="font-size: 16px;">Attack Type</h3>
+                <h3 id="attackType" style="font-size: 16px;">Attack Type</h3>
             </div>
         </div>
 
