--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -30,34 +30,39 @@
 </head>
 <body>
     <div style="display: inline-block; position: relative;">
-        <div id="overlappingDiv" style="background-color: black; position:absolute; top:0; left: 0; bottom: 0; right: 0; opacity: 0; pointer-events: none;"></div>
-
-        <!-- enemy health bar -->
-        <div style="background-color: white; width: 250px; position: absolute; top: 50px; left: 50px; border: 4px black solid; padding: 12px">
-            <h3 style="font-size: 16px">Draggle</h3>
-            <div style="position: relative;">
-                <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
-                <div id="enemyHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
-            </div>
-        </div>
-
-        <!-- player health bar -->
-        <div style="background-color: white; width: 250px; position: absolute; top: 330px; right: 50px; border: 4px black solid; padding: 12px">
-            <h3 style="font-size: 16px">Emby</h3>
-            <div style="position: relative;">
-                <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
-                <div id="playerHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
-            </div>
-        </div>
+        <div id="overlappingDiv" style="background-color: black; position:absolute; top:0; left: 0; bottom: 0; right: 0; opacity: 0; pointer-events: none; z-index: 10;"></div>
 
         <canvas></canvas>
-        <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
-            <div id="dialogueBox" style="position:absolute; top: 0; right: 0; bottom: 0; left: 0; background: white; padding: 12px; display: none; cursor: pointer;">Placeholder for Dialogue Box</div>
-            <div id="attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
+
+        <div id="userInterface">
+
+            <!-- enemy health bar -->
+            <div style="background-color: white; width: 250px; position: absolute; top: 50px; left: 50px; border: 4px black solid; padding: 12px">
+                <h3 style="font-size: 16px">Draggle</h3>
+                <div style="position: relative;">
+                    <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
+                    <div id="enemyHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+                </div>
             </div>
-            <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
-                <h3 id="attackType" style="font-size: 16px;">Attack Type</h3>
+
+            <!-- player health bar -->
+            <div style="background-color: white; width: 250px; position: absolute; top: 330px; right: 50px; border: 4px black solid; padding: 12px">
+                <h3 style="font-size: 16px">Emby</h3>
+                <div style="position: relative;">
+                    <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
+                    <div id="playerHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
+                </div>
             </div>
+
+            <div style="background-color: white; height: 140px; position: absolute; bottom: 0; right: 0; left: 0; border-top: 4px solid black; display: flex;">
+                <div id="dialogueBox" style="position:absolute; top: 0; right: 0; bottom: 0; left: 0; background: white; padding: 12px; display: none; cursor: pointer;">Placeholder for Dialogue Box</div>
+                <div id="attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
+                </div>
+                <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px solid black;">
+                    <h3 id="attackType" style="font-size: 16px;">Attack Type</h3>
+                </div>
+            </div>
+
         </div>
 
     </div>
