use player sprite for battle, randomize enemy
- player fights as himself
- randomize enemy between Emby and Draggle

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -38,7 +38,7 @@
 
             <!-- enemy health bar -->
             <div style="background-color: white; width: 250px; position: absolute; top: 50px; left: 50px; border: 4px black solid; padding: 12px">
-                <h3 style="font-size: 16px">Draggle</h3>
+                <h3 id="enemyName" style="font-size: 16px">Draggle</h3>
                 <div style="position: relative;">
                     <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
                     <div id="enemyHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
@@ -47,7 +47,7 @@
 
             <!-- player health bar -->
             <div style="background-color: white; width: 250px; position: absolute; top: 330px; right: 50px; border: 4px black solid; padding: 12px">
-                <h3 style="font-size: 16px">Emby</h3>
+                <h3 style="font-size: 16px">Adventurer</h3>
                 <div style="position: relative;">
                     <div style="height: 5px; background-color: #ccc; margin-top: 10px;"></div>
                     <div id="playerHealthBar" style="height: 5px; background-color: green; position: absolute; top: 0; left: 0; right: 0;"></div>
