Add GOLD, ITEMS, XP, and show on Map screen

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -34,6 +34,12 @@
 
         <canvas></canvas>
 
+        <div id="mapOverlay" style="position: absolute; bottom:20px; left: 20px">
+            <div id="goldOverlay">GOLD: 0</div>
+            <div id="itemOverlay">ITEMS: 0</div>
+            <div id="xpOverlay">XP: 0</div>
+        </div>
+
         <div id="userInterface" style="display: none">
 
             <!-- enemy health bar -->
