add nft selection at char creation

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -38,6 +38,15 @@
                 </select>
             </div>
 
+            <div id="nftBox">Select NFT: 
+                <select id="chooseNft">
+                    <option value="1">Generate Random</option>
+                    <option value="2">Adventurer #9</option>
+                    <option value="3">Adventurer #777</option>
+                </select><span> (View)</span><br>
+                <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
+            </div>
+
             <button id="heroButton">CONTINUE</button>
         </div>
 
