register click nft, display chosen nft stats (bug)
- mock data for nft stats
- unable to attach eventListener on newly loaded nfts (need to use async await?)
- want so that currentTarget gets me #userNft
- then can find data in children e.g. userNftName and userNftAttr

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -52,6 +52,7 @@
 
         <div id="nftScreen">
             <div id="showNfts"></div>
+            <div id="selectedNft"></div>
             <button id="nftScreenButton">Select</button>
         </div>
 
