add/show Level, loop map audio, rename drops
- add level based on XP
- show Level on map UI
- rearrange monsters.js from weakest to strongest
- rename item drops
- add condition 75% chance to drop loot
- loop Map audio

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -22,7 +22,7 @@
             <br>
             <div id="goldOverlay">GOLD: 0</div>
             <div id="itemOverlay">ITEMS: 0</div>
-            <div id="xpOverlay">XP: 0</div>
+            <div id="xpOverlay">LEVEL: 1 (0 XP)</div>
         </div>
 
         <div id="startScreen2">
