popup prompt when levelu p

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -17,6 +17,13 @@
 
         <canvas></canvas>
 
+        <!-- I want to show a popup when user levels up -->
+        <div id="levelUpOverlay">
+            <div id="levelUpTitle"></div>
+            <div id="levelUpText"></div>
+            <button id="levelUpButton">CONFIRM</button>
+        </div>
+
         <div id="mapOverlay">
             <div id="nameOverlay"></div>
             <br>
