story progression on level up, fix battle dmg
- remove select class at game start
- select class at level 2
- choose stats to add at level 3+
- equipWeapon at level 4 if available in bag
- set player's attack damage at start of every battle
- add damage done to battle log

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -37,13 +37,13 @@
 
             <div id="nameBox">Name: <input id="chooseName" value="Anon"></div>
 
-            <div id="classBox">Select Class:
+            <!-- <div id="classBox">Select Class:
                 <select id="chooseClass">
                     <option value="Warrior">Warrior</option>
                     <option value="Archer">Archer</option>
                     <option value="Wizard">Wizard</option>
                 </select>
-            </div>
+            </div> -->
 
             <div id="nftBox">Select NFT: 
                 <select id="chooseNft">
