add new Attack when reach level 5

--- a/game-ui/index.html
+++ b/game-ui/index.html
@@ -21,6 +21,7 @@
         <div id="levelUpOverlay">
             <div id="levelUpTitle"></div>
             <div id="levelUpText"></div>
+            <div id="levelUpTextMore"></div>
             <button id="levelUpButton">CONFIRM</button>
         </div>
 
