--- a/index.html
+++ b/index.html
@@ -4,134 +4,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adventurer dApp</title>
+    <title>Adventurer Island</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div id="nav">
-        <button id="connect" onclick="connect()">Connect Wallet</button>
-    </div>
-
-    <div id="controls">
-        <button id="getAllNFT" onclick="main()">Load Adventurers</button>
-        <div id="learn-more"><a href="https://testnets.opensea.io/collection/adventurer-nzfwridt0f" target="_blank">Learn More</a></div>
-        <div id="learn-more"><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">Mint for Free</a></div>
-    </div>
-
     <div id="root">
-        Connect your Wallet and Click "Load Adventurers" to Start.
-    </div>
+        <div id="overlappingDiv"></div>
 
-    <div id="hero">
-        <div id="selected-adv">
-            <h4>Selected Adventurer:</h4>
-            <div>
-                <p>ID: Adventurer #2</p>
-                <p>STR: <span id="select-str">7</span></p>
-                <p>AGI: <span id="select-agi">6</span></p>
-                <p>WIS: <span id="select-wis">6</span></p>
-            </div>
+        <canvas></canvas>
+
+        <!-- I want to show a popup when user levels up -->
+        <div id="levelUpOverlay">
+            <div id="levelUpTitle"></div>
+            <div id="levelUpText"></div>
+            <div id="levelUpTextMore"></div>
+            <button id="levelUpButton">CONFIRM</button>
         </div>
-        <div id="create-hero">
-            <h4>Create Hero:</h4>
-            <div>Enter your Hero's name: <input id="input-hero-name"></div>
-            <div>Select your Hero's Class:
-                <select id="select-class">
+
+        <div id="mapOverlay">
+            <div id="nameOverlay"></div>
+            <br>
+            <div id="goldOverlay">GOLD: 0</div>
+            <div id="itemOverlay">ITEMS: 0</div>
+            <div id="xpOverlay">LEVEL: 1 (0 XP)</div>
+        </div>
+
+        <div id="startScreen2">
+            <img src="img/startScreen2.png" alt="">
+
+            <div id="nameBox">Name: <input id="chooseName" value="Anon"></div>
+
+            <!-- <div id="classBox">Select Class:
+                <select id="chooseClass">
                     <option value="Warrior">Warrior</option>
                     <option value="Archer">Archer</option>
                     <option value="Wizard">Wizard</option>
                 </select>
+            </div> -->
+
+            <div id="nftBox">Select NFT: 
+                <select id="chooseNft">
+                    <option value="1">Generate Random</option>
+                    <option value="2">Adventurer #9</option>
+                    <option value="3">Adventurer #777</option>
+                </select><span id="viewNft"> (View)</span><br>
+                <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
             </div>
+
+            <button id="heroButton">CONTINUE</button>
         </div>
-        <div id="generate-hero">
-            <button id="genButton">GENERATE HERO</button>
-            <div id="show-hero">show hero here</div>
+
+        <div id="nftScreen">
+            <div id="showNfts"></div>
+            <div id="selectedNft"></div>
+            <button id="nftScreenButton">Select</button>
         </div>
-        <div id="generate-spawn">
-            <button id="genSpawnButton">LOG LAST SPAWN</button>
-            <div id="show-spawn">show spawn here</div>
+
+        <div id="startScreen">
+            <img src="img/startScreen.png" alt="">
+            <button id="startButton">START GAME</button>
         </div>
+
+        <div id="userInterface">
+
+            <!-- enemy health bar -->
+            <div id="enemyHealthBox">
+                <h3 id="enemyName">Draggle</h3>
+                <h5 id="enemyHP">HP: 100/100</h5>
+                <div id="healthWrapper">
+                    <div id="greyBox"></div>
+                    <div id="enemyHealthBar"></div>
+                </div>
+            </div>
+
+            <!-- player health bar -->
+            <div id="playerHealthBox">
+                <h3 id="playerName">Adventurer</h3>
+                <h5 id="playerHP">HP: 100/100</h5>
+                <div id="healthWrapper">
+                    <div id="greyBox"></div>
+                    <div id="playerHealthBar"></div>
+                </div>
+            </div>
+
+            <div id="dialogueWrapper">
+                <div id="dialogueBox">Placeholder for Dialogue Box</div>
+                <div id="attacksBox">
+                </div>
+                <div id="logWrapper">
+                    <h3 id="battleLog">Battle Log</h3>
+                    <div id="battleLogItems">
+                        <!-- 
+                            TODO: if too many lines of text, it should not go out of logWrapper container.
+                            Scrollable.
+                        -->
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
-
-    <div id="game">
-        <div id="start-game">
-            <button id="start-game-button">Start Game</button>
-        </div>
-        <div id="player-controls">
-            <button id="attack-button">Hero Attack</button>
-            <div id="last-attack"></div>
-        </div>
-        <div id="spawn-controls">
-            <button id="defend-button">Spawn Attack</button>
-            <div id="last-defend"></div>
-        </div>
-        <div id="game-result">
-            <h3>Game Log</h3>
-        </div>
-    </div>
-
-    <hr>
-
-    <!-- <div id="battle">
-        <button id="start-battle" onclick="init()">Start Battle</button>
-        <div id="your-hero">
-            <h4>YOUR HERO DETAILS:</h4>
-            <p>Name: Moonfury</p>
-            <p>Class: Warrior</p>
-            <p>STR: 7</p>
-            <p>AGI: 6</p>
-            <p>WIS: 6</p>
-            <p>ID: Adventurer #2</p>
-        </div>
-        <div id="battle-screen">
-            <button id="battle-attack">Attack</button>
-        </div>
-        <div id="battle-log">
-            <div>Round 1</div>
-            <div>Round 2</div>
-            <div>Round 3</div>
-            <div>Round 4</div>
-        </div>
-        <div id="your-spawn">
-            <h4>SPAWN DETAILS:</h4>
-            <p>Name: Blizzorg</p>
-            <p>Race: Lizardfolk</p>
-            <p>STR: 4</p>
-            <p>AGI: 6</p>
-            <p>WIS: 8</p>
-        </div>
-    </div>
-
-    <hr>
-
-    <button onclick="connectMetamask()" id="connectButton">Connect Metamask</button>
-    <button onclick="" id="claimTokens">Claim Tokens</button>
-    
-    <div>
-        <h3>Map your Adventurer to start Battling</h3>
-        <p>Select your Adventurer NFT: </p>
-        <p id="mapHero">Enter your hero name: <input></p>
-        <button onclick="startBattle()">Start Battle!!!</button>
-    </div>
-    
-    <div>
-        <h3>Details</h3>
-        <button onclick="getLastGameIndex()">Get last game index</button>
-        <p id="gameIndex">Latest Game Index: </p>
-        <button onclick="getRoundDetails()" id="roundDetails">Get Round details</button>
-        <p id="round">Round Details: </p>
-        <button onclick="getHeroDetails()" id="heroDetails">Get Hero details</button>
-        <p id="hero">Hero Details: </p>
-        <button onclick="getSpawnDetails()" id="spawnDetails">Get Spawn details</button>
-        <p id="spawn">Spawn Details: </p>
-    </div> -->
-
-    <script src="script.js"></script>
-    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
-        type="application/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="nft.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="./helpers/gameV2.js"></script>
+    <script src="data/audio.js"></script>
+    <script src="data/battleZones.js"></script>
+    <script src="data/collisions.js"></script>
+    <script src="data/attacks.js"></script>
+    <script src="data/monsters.js"></script>
+    <script src="classes.js"></script>
+    <script src="index.js"></script>
+    <script src="battleScene.js"></script>
 </body>
 </html>
