fine-tune leveling journey, remove itemsNo from UI
- new player attack moved to level 3
- add attribute points moved to level 4
- equip weapon moved to level 5
- remove itemsNo on map overlay

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="nameOverlay"></div>
             <br>
             <div id="goldOverlay">GOLD: 0</div>
-            <div id="itemOverlay">ITEMS: 0</div>
+            <div id="itemOverlay"></div>
             <div id="xpOverlay">LEVEL: 1 (0 XP)</div>
         </div>
 
