--- a/index.html
+++ b/index.html
@@ -17,34 +17,17 @@
 
         <canvas></canvas>
 
-        <!-- I want to show a popup when user levels up -->
-        <div id="levelUpOverlay">
-            <div id="levelUpTitle"></div>
-            <div id="levelUpText"></div>
-            <div id="levelUpTextMore"></div>
-            <button id="levelUpButton">CONFIRM</button>
+        <!-- START SCREEN -->
+        <div id="startScreen">
+            <img src="img/startScreen.png" alt="">
+            <button id="startButton">START GAME</button>
         </div>
 
-        <div id="mapOverlay">
-            <div id="nameOverlay"></div>
-            <br>
-            <div id="goldOverlay">GOLD: 0</div>
-            <div id="itemOverlay"></div>
-            <div id="xpOverlay">LEVEL: 1 (0 XP)</div>
-        </div>
-
+        <!-- SET CHARACTER SCREEN -->
         <div id="startScreen2">
             <img src="img/startScreen2.png" alt="">
 
             <div id="nameBox">Name: <input id="chooseName" value="Anon"></div>
-
-            <!-- <div id="classBox">Select Class:
-                <select id="chooseClass">
-                    <option value="Warrior">Warrior</option>
-                    <option value="Archer">Archer</option>
-                    <option value="Wizard">Wizard</option>
-                </select>
-            </div> -->
 
             <div id="nftBox">Create Adventurer: 
                 <select id="chooseNft">
@@ -57,6 +40,7 @@
             <button id="heroButton">CONTINUE</button>
         </div>
 
+        <!-- Show a popup when player click "(View)" -->
         <div id="nftScreen">
             <div id="showNfts"></div>
             <div id="selectedNft">
@@ -71,14 +55,27 @@
             <button id="nftScreenButton">Select</button>
         </div>
 
-        <div id="startScreen">
-            <img src="img/startScreen.png" alt="">
-            <button id="startButton">START GAME</button>
+        <!-- Show player stats on top of map -->
+        <div id="mapOverlay">
+            <div id="nameOverlay"></div>
+            <br>
+            <div id="goldOverlay">GOLD: 0</div>
+            <div id="itemOverlay"></div>
+            <div id="xpOverlay">LEVEL: 1 (0 XP)</div>
         </div>
 
+        <!-- Show a popup when user levels up -->
+        <div id="levelUpOverlay">
+            <div id="levelUpTitle"></div>
+            <div id="levelUpText"></div>
+            <div id="levelUpTextMore"></div>
+            <button id="levelUpButton">CONFIRM</button>
+        </div>
+
+        <!-- BATTLE UI -->
         <div id="userInterface">
 
-            <!-- enemy health bar -->
+            <!-- Enemy health bar -->
             <div id="enemyHealthBox">
                 <h3 id="enemyName">Draggle</h3>
                 <h5 id="enemyHP">HP: 100/100</h5>
@@ -88,7 +85,7 @@
                 </div>
             </div>
 
-            <!-- player health bar -->
+            <!-- Player health bar -->
             <div id="playerHealthBox">
                 <h3 id="playerName">Adventurer</h3>
                 <h5 id="playerHP">HP: 100/100</h5>
@@ -98,6 +95,7 @@
                 </div>
             </div>
 
+            <!-- Dialogue box -->
             <div id="dialogueWrapper">
                 <div id="dialogueBox">Placeholder for Dialogue Box</div>
                 <div id="attacksBox">
@@ -118,8 +116,8 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="nft.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="nft.js"></script>
     <script src="data/audio.js"></script>
     <script src="data/battleZones.js"></script>
     <script src="data/collisions.js"></script>
