--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 <select id="chooseNft">
                     <option value="1">Random Stats</option>
                     <option value="2">Adventurer NFT</option>
-                </select><span id="viewNft"> (View)</span><br>
+                </select>
+                <!-- https://www.w3schools.com/howto/howto_css_tooltip.asp -->
+                <span class="toolTip" id="viewNft">(View)
+                    <span class="toolTipText">Click to connect Metamask and load your ADV NFTs.</span>
+                </span><br>
                 <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
             </div>
 
