minor text updates

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </select>
                 <!-- https://www.w3schools.com/howto/howto_css_tooltip.asp -->
                 <span class="toolTip" id="viewNft">(View)
-                    <span class="toolTipText">Click to connect Metamask and load your ADV NFTs.</span>
+                    <span class="toolTipText">Click to connect Metamask and load your ADV NFTs</span>
                 </span><br>
                 <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
             </div>
