interactive addStats on levelUp (4+) screen
- on levelUp (4+) screen, changing value of input boxes for attributes will update the adv's total attribute (including the addition from input value)
- update levelUp screen description text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
         <div id="levelUpOverlay">
             <div id="levelUpTitle"></div>
             <div id="levelUpText"></div>
-            <div id="levelUpTextMore"></div>
+            <div id="levelUpTextMore">
+                <div id="addStatsBox">Placeholder
+                    <div id="chooseStats">
+                        <p id="chooseStatsStr">STR: __</p><input id="addStr" type="number" min="0" max="3">
+                        <p id="chooseStatsAgi">AGI: __</p><input id="addAgi" type="number" min="0" max="3">
+                        <p id="chooseStatsWis">WIS: __</p><input id="addWis" type="number" min="0" max="3">
+                    </div>
+                </div>
+            </div>
             <button id="levelUpButton">CONFIRM</button>
         </div>
 
