add rollStats to randomize character attributes
side effect: discards use of selectedStatsArr (generated from nft.js) in index.js. check if possible to simplify remaining code that uses the selectedStatsArr in nft.js.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
                 <span class="toolTip" id="viewNft">(View)
                     <span class="toolTipText">Click to connect Metamask and load your ADV NFTs</span>
                 </span><br>
+                <button id="rollStats">Randomize Stats</button>
                 <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
+                <br><br>
+                <div id="showStats">
+                    <div id="showStatsTitle">Selected Stats</div>
+                    <div id="showStatsStr">STR: ?</div>
+                    <div id="showStatsAgi">AGI: ?</div>
+                    <div id="showStatsWis">WIS: ?</div>
+                </div>
             </div>
 
             <button id="heroButton">CONTINUE</button>
