add penalty when faint, lose ~10-20% of gold

--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
             <button id="levelUpButton">CONFIRM</button>
         </div>
 
+        <!-- Show a popup when player faints (and loses gold) -->
+        <div id="penaltyOverlay">
+            <div id="penaltyTitle">Oh no, you fainted!</div>
+            <div id="penaltyText">You dropped __ Gold.</div>
+            <button id="penaltyButton">OK</button>
+        </div>
+
         <!-- BATTLE UI -->
         <div id="userInterface">
 
