--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="toolTipText">Click to connect Metamask and load your ADV NFTs</span>
                 </span><br>
                 <button id="rollStats">Randomize Stats</button>
-                <span><a href="https://mumbai.polygonscan.com/address/0x2e340632f482ed6ef4053028f4ad16c321ad97a7#writeContract" target="_blank">(Mint for free)</a></span>
+                <span><a href="https://opensea.io/collection/adventurer-eth" target="_blank">(OpenSea)</a></span>
                 <br><br>
                 <div id="showStats">
                     <div id="showStatsTitle">Selected Stats</div>
