rename data folder to helpers

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="nft.js"></script>
-    <script src="data/audio.js"></script>
-    <script src="data/battleZones.js"></script>
-    <script src="data/collisions.js"></script>
-    <script src="data/attacks.js"></script>
-    <script src="data/monsters.js"></script>
+    <script src="helpers/nft.js"></script>
+    <script src="helpers/audio.js"></script>
+    <script src="helpers/battleZones.js"></script>
+    <script src="helpers/collisions.js"></script>
+    <script src="helpers/attacks.js"></script>
+    <script src="helpers/monsters.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
     <script src="battleScene.js"></script>
