--- a/dapp/public/index.html
+++ b/dapp/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R61J1B4V79"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1SMNVCQ65N"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-R61J1B4V79');
+      gtag('config', 'G-1SMNVCQ65N');
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
