--- a/dapp/public/index.html
+++ b/dapp/public/index.html
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Adv3nture.xyz Vaults"
+      content="Adv3nture.xyz Vaults for GOLD and SILVER deposits"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Adv3nture.xyz</title>
+    <title>Adv3nture.xyz Vaults</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
